--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -23,10 +23,10 @@ jobs:
           terraform_version: 1.9.0
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init ./cloudflare
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan ./cloudflare
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve ./cloudflare
