chore: Update Terraform commands to use `-chdir` option for directory path

--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -23,7 +23,7 @@ jobs:
           terraform_version: 1.9.0
 
       - name: Terraform Init
-        run: terraform init -chdir=./cloudflare
+        run: terraform init
 
       - name: Terraform Plan
         run: terraform plan -chdir=./cloudflare
