--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -26,7 +26,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Plan
-        run: terraform plan -chdir=./cloudflare
+        run: terraform -chdir=./cloudflare plan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -chdir=./cloudflare
+        run: terraform -chdir=./cloudflare apply -auto-approve
