--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -23,10 +23,13 @@ jobs:
           terraform_version: 1.9.0
 
       - name: Terraform Init
+        working-directory: ./cloudflare
         run: terraform init
 
       - name: Terraform Plan
-        run: terraform -chdir=./cloudflare plan
+        working-directory: ./cloudflare
+        run: terraform plan
 
       - name: Terraform Apply
-        run: terraform -chdir=./cloudflare apply -auto-approve
+        working-directory: ./cloudflare
+        run: terraform apply -auto-approve
