--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 env:
-  CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
-  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+  TF_VAR_cloudflare_email: ${{ secrets.CF_EMAIL }}
+  TF_VAR_cloudflare_api_token: ${{ secrets.CF_API_TOKEN }}
 
 jobs:
   terraform:
