--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.9.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
         working-directory: ./cloudflare
