--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - ".github/workflows/apply_terraform.yaml"
+      - "cloudflare/**"
 
 env:
   TF_VAR_cloudflare_api_token: ${{ secrets.CF_API_TOKEN }}
