chore: Update Cloudflare worker route pattern and include cloudflare directory in GitHub Actions workflow

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ tfplan*
 
 # Terraform lock file override. We need to add this file to maintain the provider dependencies
 !.terraform.lock.hcl
+
+node_modules
