chore: Update Cloudflare worker route pattern and include cloudflare directory in GitHub Actions workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,8 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
+      - name: Build
+        run: make build
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
