chore: Update TinyGo version to 0.30.0 in GitHub Actions workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,10 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
+      - name: Setup TinyGo
+        uses: acifani/setup-tinygo@v2
+        with:
+          tinygo-version: 0.30.0
       - name: Build
         run: make build
       - name: Deploy
