chore: Update Node.js version to 18 in GitHub Actions workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,10 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
       - name: Setup TinyGo
         uses: acifani/setup-tinygo@v2
         with:
