--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "mnt_profile"
 main = "index.js"
 compatibility_date = "2024-08-06"
 compatibility_flags = [ "nodejs_compat" ]
+rules = [
+  { type = "Data", globs = ["**/*.png"], fallthrough = true }
+]
