--- a/.github/workflows/apply_terraform.yaml
+++ b/.github/workflows/apply_terraform.yaml
@@ -11,6 +11,7 @@ on:
 env:
   TF_VAR_cloudflare_api_token: ${{ secrets.CF_API_TOKEN }}
   TF_VAR_cloudflare_account_id: ${{ secrets.CF_ACCOUNT_ID }}
+  TF_VAR_cloudflare_zone_id: ${{ secrets.CF_ZONE_ID }}
 
 jobs:
   terraform:
